--- a/HW4/html/index.html
+++ b/HW4/html/index.html
@@ -650,9 +650,7 @@
               </ul>
             </div>
             <div class="btn-wrap">
-              <a class="btn" href="#">
-                <span>Book a free inspection</span>
-              </a>
+              <button class="btn">Book a free inspection</button>
             </div>
           </div>
         </div>
